--- a/configs/main.env
+++ b/configs/main.env
@@ -1,3 +1,6 @@
 DB_DRIVER = postgres
 DB_SOURCE = postgresql://root:root250700@localhost:5432/handly?sslmode=disable
 SERVER_ADDRESS = 0.0.0.0:8080
+TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
+ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
